add documentation regarding the displayName in ERXNavigationMenu

--- a/Frameworks/Core/ERExtensions/Documentation/Navigation.html
+++ b/Frameworks/Core/ERExtensions/Documentation/Navigation.html
@@ -84,6 +84,8 @@
 		displayName takes precedence over name for display purposes.
 		If no displayName is provided, name is used.  Localized keys are
 		"Nav.&lt;displayName&gt;" and "Nav.&lt;name&gt;" respectively.
+		To specify a keyPath for the displayName, you need to start the keypath with
+		a '^' character. (displayName = "^session.navController.displayNameFor...";)
 		*/
 		displayName = "MovieKey";
 		children = ("CreateMovie");
